--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "docs:dev": "vitepress dev docs",
-    "docs:build": "vitepress build docs",
+    "docs:dev": "node docs/.vitepress/scripts/gen-recent.mjs && vitepress dev docs",
+    "docs:build": "node docs/.vitepress/scripts/gen-recent.mjs && vitepress build docs",
     "docs:preview": "vitepress preview docs"
   },
   "keywords": [],
