更新部署配置以支持环境变量，调整文档基础路径，并同步更新最近工具的更新时间。

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,7 +23,7 @@ jobs:
         run: npm i
 
       - name: Build
-        run: npm run docs:build
+        run: VITEPRESS_BASE=/ npm run docs:build
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
@@ -31,5 +31,7 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: docs/.vitepress/dist
           cname: toolbook.wat.ink
+
+          
 
 
